Tests/Should_succeed/5_Functions/10_FunctionAsMethod.decaf
class Test {
	int m1(){
		WriteString("0=0");
		WriteString("\n");
		return 42;
	}
	void main(){
		m1();
	}
}