tests/Should_fail/5_Functions/07_CallReturnIncorrectType.decaf
class Test {

    int m1(){
        return true;
    }
    
	void main(){
		m1();
	}
}